--- a/package.json
+++ b/package.json
@@ -8,12 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "@styled-icons/boxicons-logos": "^10.18.0",
-    "@styled-icons/feather": "^10.18.0",
-    "@styled-icons/heroicons-outline": "^10.19.0",
     "next": "10.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "styled-icons": "^10.22.0"
   }
 }
