--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next-images": "^1.6.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-loader-spinner": "^3.1.14",
     "styled-components": "^5.2.1",
     "styled-icons": "^10.22.0"
   }
