working on getting test configuration right

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "next": "10.0.1",
@@ -15,5 +16,16 @@
     "react-loader-spinner": "^3.1.14",
     "styled-components": "^5.2.1",
     "styled-icons": "^10.22.0"
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^7.28.0",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.1",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
+    "jest-dom": "^4.0.0"
+  },
+  "jest": {
+    "verbose": true
   }
 }
